<resources>
    <string name="app_name">Мамкин майнер</string>
    <string name="save">Сохранить</string>
    <string name="enter_text">Введите текст</string>
    <string name="symbols_template">%s %s</string>
    <string name="last_update_template">Последнее обновление: %s</string>
    <string name="dialog_share_coin">Отправить коин другу?</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="slash">/</string>
    <string name="price">Цена:</string>
    <string name="min_price">Минимум за день:</string>
    <string name="updated">Обновлено:</string>
    <string name="last_market">Последняя сделка:</string>
    <string name="difference_in_percent">За последние 24 часа, %:</string>
    <string name="max_price">Колебание за день:</string>
    <string name="min_price_for_day">Максимум за день:</string>
    <string name="сoin_image">Значек криптовалюты</string>
    <string name="search">Поиск по названию валюты</string>
    <string name="enter_сurrency">Введите криптовалюту</string>
    <string name="share">Поделиться</string>
    <string name="coin">Coin</string>
    <string name="write_header">Введите заголовок</string>

</resources>